--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Webpage</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
+   
 </head>
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="nav-links">
+        <button class="dropbtn" onclick="toggleButton()">Menu
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <span class="dropdown-content" id="navList">
+            <a href="#">Home</a></li>
+            <a href="#">About</a></li>
+            <a href="#">Gallery</a></li>
+            <a href="#">Contact</a></li>
+        </span>    
+        </div>
+        </div>
     </div>
 
     <!-- Hero section -->
